--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-elements": "^3.4.2"
+    "react-native-elements": "^3.4.2",
+    "react-native-onesignal": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
