--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
+    "moment": "^2.29.1",
     "react": "17.0.1",
+    "react-moment": "^1.1.1",
     "react-native": "0.64.2",
+    "react-native-date-picker": "^3.3.2",
     "react-native-elements": "^3.4.2",
     "react-native-onesignal": "^4.1.1"
   },
